# fake-robot-data

./: CMakeLists.txt  README.md  package.xml
config/: config.yaml
include/fake_robot_data/: fake_diffdrive_node.hpp
launch/: fake_data_node.launch.py
src/: fake_diffdrive_node.cpp
