<?xml version="1.0"?>
<package format="3">
<name>fake_diffdrive</name>
<version>0.0.1</version>
<description>Fake differential drive robot simulator node publishing cmd_vel, odometry and IMU.</description>
<maintainer email="you@example.com">Your Name</maintainer>
<license>Apache-2.0</license>


<buildtool_depend>ament_cmake</buildtool_depend>
<depend>rclcpp</depend>
<depend>geometry_msgs</depend>
<depend>nav_msgs</depend>
<depend>sensor_msgs</depend>
<depend>tf2</depend>
<depend>tf2_geometry_msgs</depend>


<export>
<build_type>ament_cmake</build_type>
</export>
</package>